--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GetCar">
         <activity
+            android:name=".RegActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:noHistory="true"
             android:exported="true"
+            android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
